metadata/sf-prod/force-app/main/default/objects/CSM_Milestone_Result__c/CSM_Milestone_Result__c.object-meta.xml
<CustomObject>
    <description>Holds the result of a CSM milestone execution</description>
    <label>CSM Milestone Result</label>
    <nameField>
        <label>CSM Milestone Result Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CSM Milestone Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>