metadata/sf-prod/force-app/main/default/objects/CSM_Milestone_Result__c/fields/Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date__c</fullName>
    <description>Date when the milestone has been completed</description>
    <label>Completed Date</label>
    <type>DateTime</type>
</CustomField>