metadata/sf-prod/force-app/main/default/objects/CSM_Milestone_Result__c/fields/CSM_Milestone__c.field-meta.xml
<CustomField>
    <fullName>CSM_Milestone__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The milestone definition</description>
    <label>CSM Milestone</label>
    <referenceTo>CSM_Milestone__c</referenceTo>
    <relationshipLabel>CSM Milestone Results</relationshipLabel>
    <relationshipName>CSM_Milestone_Results</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>