metadata/sf-prod/force-app/main/default/objects/CSM_Milestone_Result__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <description>Opportunity the milestone executed for</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>CSM Milestone Results</relationshipLabel>
    <relationshipName>CSM_Milestone_Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>