metadata/sf-prod/force-app/main/default/objects/CSM_Milestone_Result__c/fields/Result_Summary__c.field-meta.xml
<CustomField>
    <fullName>Result_Summary__c</fullName>
    <description>Free text provided by a CSM agent to describe the outcome of the CSM milestone execution</description>
    <inlineHelpText>Provide details about CSM milestone execution outcome</inlineHelpText>
    <label>Result Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>