metadata/sf-prod/force-app/main/default/objects/CSM_Milestone_Result__c/fields/Result_URL__c.field-meta.xml
<CustomField>
    <fullName>Result_URL__c</fullName>
    <description>Customer URL</description>
    <label>Result URL</label>
    <type>Url</type>
</CustomField>