metadata/sf-prod/force-app/main/default/objects/CSM_Milestone_Result__c/listViews/All_CSM_Milestone_Results.listView-meta.xml
<ListView>
    <fullName>All_CSM_Milestone_Results</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>